alpm-types/src/relation/snapshots/soname::invalid_sonamev2_parser@case_3.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid sonamev2
 | 
 | lib:libexample.so.10-10
 |                     ^ expected end of input.
 | 
 = while parsing:
   alpm-sonamev2: (-10)
   → invalid sonamev2
   → expected end of input.
